# College-Information-LLM

./: .gitignore  FP-College-Info-LLM.py  LangChain.ipynb  LangGraph-FP-LLM.ipynb  LangGraph-adaptive-rag.ipynb  LangGraph.ipynb  README.md  get_posts.ipynb  languages.py  main.py  main.py.tmp  output.txt  pyproject.toml  ranking_types.csv  requirements.txt  streamlit+langgraph.py  streamlit_test.py
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: get_posts-checkpoint.ipynb  knowledgebase-checkpoint.py
colleges/: colleges.csv
knowledge_base_test/: 开除处分.txt  美国博士申请指南.txt  美国大学申请指南.txt  美国研究生申请指南.txt  美国社区大学申请及转学指南.txt
lxbd/: 13134.txt  13610.txt  13928.txt  13975.txt  13987.txt  14004.txt  14066.txt  14073.txt  14154.txt  14170.txt  14202.txt  14208.txt  14219.txt  14240.txt  14278.txt  14288.txt  14301.txt  14306.txt  14326.txt  14338.txt  14406.txt  14411.txt  14479.txt  14519.txt  14523.txt  14524.txt  14528.txt  14539.txt  14984.txt  14987.txt  14990.txt  15017.txt  15020.txt  15176.txt  15195.txt  15199.txt  15236.txt  15782.txt  15803.txt  15807.txt  (+176 more)
utilities/: colleges.py  knowledgebase.py  languages.py  llm_wrapper.py  ranking.py  schema.py
vector/: colleges-data-vector.faiss  colleges-data-vector.pkl  knowledge-base-vector-lxbd.faiss  knowledge-base-vector-lxbd.pkl  knowledge-base-vector-lxbd_chunked.pkl
