[project]
authors = [
    {name = "Lucas Lu"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "streamlit<2.0.0,>=1.39.0",
    "pandas<3.0.0,>=2.2.3",
    "langchain<1.0.0,>=0.3.6",
    "langchain-openai<1.0.0,>=0.2.5",
    "langchain-community<1.0.0,>=0.3.4",
    "langgraph<1.0.0,>=0.2.43",
    "faiss-cpu<2.0.0,>=1.9.0",
    "matplotlib<4.0.0,>=3.9.2",
    "pymysql<2.0.0,>=1.1.1",
]
name = "college-information-llm"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
